--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,6 +143,7 @@ Mahesh</string>
   <string name="msg_successfully_satsang">Successfully Satsang created. </string>
   <string name="msg_do_you_want_exit">Do you want to exit. </string>
   <string name="msg_password_mail_email">Password mailed to your email id.</string>
+  <string name="msg_successfully_satsang_saved">Successfully satsang saved.</string>
 
   <!-- Error-->
   <string name="err_default">Currently we are unable to service your request. Please try after some time.</string>
