--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,6 +149,7 @@ Mahesh</string>
   <string name="msg_do_you_want_exit">Do you want to exit. </string>
   <string name="msg_password_mail_email">Password mailed to your email id.</string>
   <string name="msg_successfully_satsang_saved">Successfully satsang saved.</string>
+  <string name="msg_successfully_joined_satsang">Successfully joined satsang</string>
   <string name="msg_successfully_japam_updated">Count is updated.</string>
   <string name="msg_select_country">Select Country.</string>
 
