--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
   <string name="open">open navigation drawer</string>
   <string name="close">close navigation drawer</string>
   <string name="action_settings">Settings</string>
-  <string name="lbl_hara_hara">Jaya Jaya Shankara Hara Hara Shankara \nHara Hara Shankara Jaya Jaya Shankara\n</string>
+  <string name="lbl_hara_hara">Hara Hara Shankara \nJaya Jaya Shankara</string>
   <string name="lbl_message">Jaya Jaya Shankara Hara Hara Shankara \nHara Hara Shankara Jaya Jaya Shankara</string>
 
   <!--Registration -->
@@ -103,7 +103,15 @@ Mahesh</string>
   <string name="lbl_signin">Sign in </string>
   <string name="lbl_register">Register</string>
   <string name="lbl_signout">Sign Out</string>
+
+  <string name="lbl_activities">Activities</string>
+  <string name="lbl_sahasra_gayathri_counter">Sahasra Gayathri Counter</string>
+  <string name="lbl_anusham_pooja_finder">Anusham Pooja Finder</string>
+  <string name="lbl_devithin_kural_finder">Devithin Kural Finder</string>
+
+
   <string name="lbl_dashboard">Dashboard</string>
+
   <string name="lbl_devithin_kural">Devithin Kural</string>
   <string name="lbl_books">Books</string>
   <string name="lbl_satsang">Satsang</string>
