--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
   <string name="open">open navigation drawer</string>
   <string name="close">close navigation drawer</string>
   <string name="action_settings">Settings</string>
-  <string name="lbl_hara_hara">ஹர ஹர சங்கர \nஜெயா ஜெயா சங்கர</string>
+  <string name="lbl_hara_hara">ஹர ஹர சங்கர ஜய ஜய சங்கர\nஹர ஹர சங்கர ஜய ஜய சங்கர</string>
   <string name="lbl_message">Jaya Jaya Shankara Hara Hara Shankara \nHara Hara Shankara Jaya Jaya Shankara</string>
 
   <!--Registration -->
