1. Crash tool(fabric) integration. 2. Support for Lower version 4.1 and above. 3. Exo Player Integration Radio. 4. Feedback: Taking directly to the mail box when user click’s on feedback.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,23 +173,22 @@ Sri Sankara Bhagavatpada settled down at Kancheepuram (Kanchi) at the end of his
   \nமாயப்பிறப்பறுக்கும் மஹா பெரியவா அடி போற்றி!
 </string>
 <string name="lbl_radio_schedule">
-  06.00  - 06.30 : Suprabhatham
-  \n06.00  - 06.45 : Aditya Hrudayam
-  \n06.45  - 07.30 : Ganapathi Atharvasheeresham
-  \n07.30  - 08.00 : Stotram
-  \n08.00  - 09.00 : Periyavaa Kural
-  \n09.00  - 10.00 : Ganesa Sarma
-  \n10.00  - 11.00 : Devotee Experience
-  \n11.00  - 12.00 : Thevaram/Thiruvasagam
-  \n12.00  - 01.00 : Indra Soundararajan
-  \n01.00  - 03.00 : Guru Bhajans
-  \n03.00  - 04.00 : Periyavaa Mahimai
-  \n04.00  - 05.00 : Devotee Experience
-  \n05.00  - 06.00 : Pradosha Kaala Seva
-  \n06.00  - 06.30 : Sahasranama Seva
-  \n06.30  - 07.00 : Stotram
-  \n07.00  - 08.30 : VDPS
-
+06.00  - 06.30 : Suprabatham
+\n06.30  - 06.45 : Aditya Hrudayam
+\n06.45  - 07.30 : Veda Gosham
+\n07.30  - 08.00 : Stotra Mala
+\n08.00  - 09.00 : Periyavaa Kural
+\n09.00  - 10.00 : Upanyasam
+\n10.00  - 11.00 : Devotee Experience
+\n11.00  - 12.00 : Thevaram
+\n12.00  - 01.00 : Upanyasam
+\n01.00  - 03.00 : Bajans
+\n03.00  - 04.00 : Periyava Kural
+\n04.00  - 05.00 : Devotee Experience
+\n05.00  - 06.00 : Pradosha Kaala Seva
+\n06.00  - 06.30 : Sahasranama
+\n06.30  - 07.00 : Stotra Mala
+\n07.00  - 08.30 : Veda Bhashyam
 </string>
   <string name="lbl_books">Books</string>
   <string name="lbl_satsang">Satsang</string>
